# kataru-parser

./: Cargo.toml  README.md
src/: branches.rs  comparator.rs  conditional.rs  config.rs  deserializer.rs  lib.rs  loader.rs  operator.rs  packer.rs  state.rs  story.rs  validator.rs  value.rs
src/structs/: branches.rs  conditional.rs  config.rs  mod.rs  state.rs  statemod.rs  story.rs
story/: config.yml  passages.yml
tests/: packer.rs  parser.rs
